--- a/src/main/resources/html/login.html
+++ b/src/main/resources/html/login.html
@@ -17,7 +17,7 @@
 <header class="page-header">
   <nav class="navbar navbar-expand-lg justify-content-around">
     <a href="/" class="navbar-brand main-logo">
-      Mój <span>Sklep</span>
+      Mój <span>Sklepp</span>
     </a>
     <ul class="nav nounderline text-uppercase">
       <li class="nav-item ml-4">
